# DSA_group_project_1

./: README.md
Bookpoint/: CMakeLists.txt  adatbazis.txt  dates.txt  enums.h  main.c  publishers.txt
Bookpoint/Book/: Book.c  Book.h
Bookpoint/Date/: Date.c  Date.h
Bookpoint/Menu/: menu.c  menu.h
Bookpoint/Person/: Person.c  Person.h
Bookpoint/Publisher/: Publisher.c  Publisher.h
Bookpoint/Utility/: utils.c  utils.h
